...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter text here" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WpV-bE-Iyh">
                                <rect key="frame" x="10" y="128" width="394" height="34"/>
                                <accessibility key="accessibilityConfiguration" hint="textField" identifier="textField" label="textField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                                <rect key="frame" x="157" y="202" width="100" height="50"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" hint="popup" identifier="popup" label="popup"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="HI4-Cl-psA"/>
...
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="payconiq" translatesAutoresizingMaskIntoConstraints="NO" id="WKQ-cp-Z6Y">
                                        <rect key="frame" x="101.5" y="20" width="128" height="128"/>
                                        <accessibility key="accessibilityConfiguration" hint="logo" identifier="logo" label="logo">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PayCoiniq" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zLP-mq-LRm">
                                        <rect key="frame" x="10" y="158" width="311" height="40"/>
                                        <accessibility key="accessibilityConfiguration" hint="title" identifier="title" label="title"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="0OZ-DP-be3"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="125.5" height="50"/>
                                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                                <accessibility key="accessibilityConfiguration" hint="reshuffle" identifier="reshuffle" label="reshuffle"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                <state key="normal" title="Reshuffle">
...
                                                <rect key="frame" x="165.5" y="0.0" width="125.5" height="50"/>
                                                <color key="backgroundColor" red="0.87843137250000003" green="0.20784313730000001" blue="0.13725490200000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" hint="dismiss" identifier="dismiss" label="dismiss"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                <state key="normal" title="Dismiss">
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="text" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hpk-E3-0EH">
                                                <rect key="frame" x="20" y="10" width="271" height="20.5"/>
                                                <accessibility key="accessibilityConfiguration" hint="discription" identifier="discription" label="discription"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
