...
                                        <color key="backgroundColor" red="0.92941176469999998" green="0.34901960780000002" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="Up3-Bo-dCW"/>
                                            <constraint firstAttribute="height" constant="60" id="a8a-pW-p0A"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                        <state key="normal" title="Login">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="actionLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aLW-0Y-TT6"/>
                                        </connections>
                                    </button>
...
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="40" id="2XK-Jj-yev"/>
                                                    <constraint firstAttribute="height" constant="40" id="CQR-6q-sOC"/>
                                                </constraints>
                                                <color key="tintColor" systemColor="systemRedColor"/>
                                                <state key="normal">
                                                    <imageReference key="image" image="play" catalog="system" symbolScale="large"/>
                                                </state>
                                                <state key="selected">
                                                    <imageReference key="image" image="pause" catalog="system" symbolScale="large"/>
                                                </state>
                                                <connections>
                                                    <action selector="playButton:" destination="bqq-Lg-bk9" eventType="touchUpInside" id="Ef2-of-iU6"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vpx-tZ-iBf">
...
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="aAt-gY-8ir"/>
                                            <constraint firstAttribute="width" constant="40" id="qhi-IJ-biG"/>
                                        </constraints>
                                        <color key="tintColor" systemColor="systemRedColor"/>
                                        <state key="normal">
                                            <imageReference key="image" image="arrowshape.turn.up.backward" catalog="system" symbolScale="large"/>
                                        </state>
                                        <connections>
                                            <action selector="backButton:" destination="bqq-Lg-bk9" eventType="touchUpInside" id="GFm-au-ZnK"/>
                                        </connections>
                                    </button>
                                </subviews>
...
